# GNN-AID

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements1.txt  requirements2.txt  requirements3.txt
demo/: back_explainers_demo.py  backend_demo.py  datasets_test.py  mlm_explainers.py  user_exp_example.py
docs/: .readthedocs.yaml
experiments/: Cora_reverse  EAttack_experiment.py  ExplGNNExpl_experiment.py  Explain_Defense_experiment.py  Explain_Defese_Results.py  GNNExplainerDIG_exp_example.py  GNNExplainerGEOM_exp_example.py  GradCAM_exp_example.py  GraphMask_exp_example.py  NeuralAnalysis_orig_exp_example.py  NeuralAnalysis_our_exp_example.py  ProtGNN_exp.py  attack_defense_test.py  computation_graph.py  configurations_graph_mask.json  cora_reverse_5  cora_reverse_random  interpretation_metrics_test.py  subgraph_exp_example.py  user_dataset.py  zorro_exp_example.py
metainfo/: evasion_attack_parameters.json  evasion_defense_parameters.json  explainers_global_run_parameters.json  explainers_init_parameters.json  explainers_local_run_parameters.json  framework_parameters.json  functions_parameters.json  information_check_correctness_models.json  mi_attack_parameters.json  mi_defense_parameters.json  modules_parameters.json  optimizers_parameters.json  poison_attack_parameters.json  poison_defense_parameters.json  save_dir_structure.json  torch_geom_index.json  torch_geom_index_all.json
src/: __init__.py  test.py
tests/: attacks_test.py  datasets_test.py  defense_test.py  explainers_full_test.py  explainers_test.py  models_test.py
(+195 files in other folders)
