[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
authors = [
    {name = "Mikhail Drobyshevskiy", email = "drobyshevsky@ispras.ru"},
    {name = "Kirill Lukyanov", email = "lukyanov.k@ispras.ru"}, ]
dynamic = ["description"]
version = "0.0.1"

[tool.setuptools.dynamic]
#version = {file = "VERSION"}